# py-agentic-ai

./: .env.example  .pre-commit-config.yaml  README.md  py-agentic-ai.code-workspace  pyproject.toml  show-tree.ps1
src/expenses_ai_agent/: __init__.py
src/expenses_ai_agent/cli/: cli.py
src/expenses_ai_agent/llms/: base.py  exceptions.py  openai.py  openai_model_prices.yaml  output.py
src/expenses_ai_agent/prompts/: system.py  user.py
src/expenses_ai_agent/services/: classification.py  exceptions.py
src/expenses_ai_agent/storage/: exceptions.py  models.py  repo.py
src/expenses_ai_agent/tools/: tools.py
src/expenses_ai_agent/utils/: currency.py  date_formatter.py  exceptions.py
tests/unit/: test_week1.py  test_week2.py  test_week3.py
